[package]
name = "gs_rendering"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.2"
bevy_gaussian_splatting = "6.0.0"
bevy_panorbit_camera = "0.33.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
