[package]
name = "gs_rendering"
version = "0.3.0"
edition = "2024"

[dependencies]
bevy = "0.17.3"
bevy_gaussian_splatting = "6.0.0"
bevy_panorbit_camera = "0.33.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
